# MetaClaw

./: LICENSE  README.md  README_ZH.md  openclaw_model_kimi.sh  openclaw_model_qwen.sh  pyproject.toml  requirements.txt  run_openclaw_tinker.sh
aiming_metaclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assets/: README_AR.md  README_DE.md  README_ES.md  README_FR.md  README_HI.md  README_IT.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_VI.md  README_ZH.md
examples/: run_conversation_opd.py  run_conversation_replay.py  run_conversation_rl.py  train.jsonl
extensions/: README.md
extensions/metaclaw-openclaw/: README.md  index.ts  openclaw.plugin.json
memory_data/conversation/: conversation_skills.json
memory_data/skills/agent-task-handoff/: SKILL.md
memory_data/skills/async-communication-etiquette/: SKILL.md
memory_data/skills/audience-aware-communication/: SKILL.md
memory_data/skills/auth-and-authorization-patterns/: SKILL.md
memory_data/skills/avoid-acting-on-assumptions/: SKILL.md
memory_data/skills/avoid-hallucinating-specifics/: SKILL.md
memory_data/skills/avoid-scope-creep/: SKILL.md
memory_data/skills/clarify-ambiguous-requests/: SKILL.md
memory_data/skills/codebase-navigation/: SKILL.md
memory_data/skills/context-window-management/: SKILL.md
memory_data/skills/data-validation-first/: SKILL.md
metaclaw/: README.md  __init__.py  __main__.py  api_server.py  cli.py  config.py  config_store.py  data_formatter.py  launcher.py  openclaw_env_rollout.py  prm_scorer.py  rollout.py  runtime_state.py  skill_evolver.py  skill_manager.py  trainer.py  utils.py
tests/: test_cli.py  test_runtime_state.py  test_setup_wizard.py
(+25 files in other folders)
