[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaclaw"
version = "0.1.0"
description = "OpenClaw RL training via Tinker cloud LoRA"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["metaclaw*"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E731", "F403", "F405"]
